tests/badly_positioned_unknown_use/badly_positioned_unknown_use.exp
Error --------------------------------------------------------------------------------------------------- test1.js:19:38

Cannot call `foo` because inexact object type [1] is incompatible with exact object type [2]. [incompatible-exact]

   test1.js:19:38
   19| var x = f<React.ComponentType<{}>>()(foo(Comp));
                                            ^^^

References:
   test1.js:19:31
   19| var x = f<React.ComponentType<{}>>()(foo(Comp));
                                     ^^ [1]
   test1.js:4:34
    4|   Component: React.ComponentType<{|...P|}>,
                                        ^^^^^^^^ [2]



Found 1 error
